--- a/edit_profile.html
+++ b/edit_profile.html
@@ -24,22 +24,22 @@
 
 
         <div class="container-fluid px-xl-5 px-3">
-            <div class="row pt-5 pb-3">
-                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
+            <div class="row pt-4 pb-3">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-1 order-2">
                     <a class="td_none-s" href="more.html">
-                        <h1 class="pr-2 text-dark">More</h1>
+                        <h4 class="pr-2 text-dark">More</h4>
                     </a>
-                    <h1 class="px-2"><strong>/</strong></h1>
-                    <h1 class="fg_green-s pl-2">Edit Personal Profile</h1>
+                    <h4 class="px-2"><strong>/</strong></h4>
+                    <h4 class="fg_green-s pl-2">Edit Personal Profile</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                     <div class="">
-                        <a>
-                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                            <span> Adailiya </span>
+                        <a class="pr-3">
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong></span>
                         </a>
-                        <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                        <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                        <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                     </div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
 
 
         <!-- container for favorite players - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s">
+        <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <div class="row pt-5 px-xl-5 justify-content-center">
                 <div class="col-12 text-center">
                     <img src="assets/images/edit_profile.svg" class="position-absolute edit_profile-s" alt="edit profile icon">
@@ -63,38 +63,38 @@
                 <div class="row pt-2 pb-5 px-xl-5 px-3">
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="first_name-d"><strong><h4>FIRST NAME</h4></strong></label>
-                            <input type="text" class="form-control form-control-lg first_name-t rounded" value="Ahmad" id="first_name-d" placeholder="First Name">
+                            <label for="first_name-d"><strong><h6>FIRST NAME</h6></strong></label>
+                            <input type="text" class="form-control fs_14px-s form-control-lg first_name-t rounded" value="Ahmad" id="first_name-d" placeholder="First Name">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="last_name-d"><strong><h4>LAST NAME</h4></strong></label>
-                            <input type="text" class="form-control form-control-lg last_name-t rounded" value="Jamele" id="last_name-d" placeholder="Last Name">
+                            <label for="last_name-d"><strong><h6>LAST NAME</h6></strong></label>
+                            <input type="text" class="form-control fs_14px-s form-control-lg last_name-t rounded" value="Jamele" id="last_name-d" placeholder="Last Name">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="User_name-d"><strong><h4>USERNAME</h4></strong></label>
-                            <input type="text" class="form-control form-control-lg User_name-t rounded" value="@ahmadjamele" id="first_name-d" placeholder="User Name">
+                            <label for="User_name-d"><strong><h6>USERNAME</h6></strong></label>
+                            <input type="text" class="form-control fs_14px-s form-control-lg User_name-t rounded" value="@ahmadjamele" id="first_name-d" placeholder="User Name">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="date_of_birth-d"><strong><h4>DATE OF BIRTH</h4></strong></label>
-                            <input type="date" class="form-control form-control-lg date_of_birth-t rounded" value="12/05/1998" id="date_of_birth-d" placeholder="Date of Birth">
+                            <label for="date_of_birth-d"><strong><h6>DATE OF BIRTH</h6></strong></label>
+                            <input type="date" class="form-control fs_14px-s form-control-lg date_of_birth-t rounded" value="12/05/1998" id="date_of_birth-d" placeholder="Date of Birth">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="favorite_club-d"><strong><h4>FAVORITE CLUB</h4></strong></label>
-                            <input type="text" class="form-control form-control-lg favorite_club-t rounded" value="Qadisya" id="favorite_club-d" placeholder="Favorite Club">
+                            <label for="favorite_club-d"><strong><h6>FAVORITE CLUB</h6></strong></label>
+                            <input type="text" class="form-control fs_14px-s form-control-lg favorite_club-t rounded" value="Qadisya" id="favorite_club-d" placeholder="Favorite Club">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="price-d"><strong><h4>PRICE</h4></strong></label>
-                            <input type="number" class="form-control form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="price">
+                            <label for="price-d"><strong><h6>PRICE</h6></strong></label>
+                            <input type="number" class="form-control fs_14px-s form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="price">
                         </div>
                     </div>
                 </div>
@@ -102,37 +102,37 @@
 
                 <div class="row px-xl-5 px-3">
                     <div class="col-lg-4 col-12 pt-4">
-                        <h4><strong>Gender</strong></h4>
+                        <h6><strong>Gender</strong></h6>
                         <div class="form-check">
                             <label class="form-check-label fs_18px-s">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="gender" id="male-d" value="male" checked>
-                                <span class="pl-3">Male</span>
+                            <input class="form-check-input radio-inline  mt-2 mr-3" type="radio" name="gender" id="male-d" value="male" checked>
+                                <span class="pl-3 fs_14px-s">Male</span>
                             </label>
                             <label class="form-check-label fs_18px-s ml-5">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="gender" id="female-d" value="female">
-                                <span class="pl-3"> Female</span>
+                            <input class="form-check-input radio-inline  mt-2 mr-3" type="radio" name="gender" id="female-d" value="female">
+                                <span class="pl-3 fs_14px-s"> Female</span>
                             </label>
                         </div>
                     </div>
 
                     <div class="col-lg-8 col-12 pt-4">
-                        <h4><strong>Position</strong></h4>
+                        <h6><strong>Position</strong></h6>
                         <div class="form-check">
                             <label class="form-check-label fs_18px-s">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="goalkeeper-d" value="goalkeeper" checked>
-                                <span class="pl-3">Goalkeeper</span>
+                                <span class="pl-3 fs_14px-s">Goalkeeper</span>
                             </label>
                             <label class="form-check-label fs_18px-s ml-5">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="defender-d" value="defender">
-                                <span class="pl-3">Defernder</span>
+                                <span class="pl-3 fs_14px-s">Defernder</span>
                             </label>
                             <label class="form-check-label fs_18px-s ml-5">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="midfielder-d" value="midfielder" checked>
-                                <span class="pl-3">Midfielder</span>
+                                <span class="pl-3 fs_14px-s">Midfielder</span>
                             </label>
                             <label class="form-check-label fs_18px-s ml-5">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="forward-d" value="forward">
-                                <span class="pl-3">Forward</span>
+                                <span class="pl-3 fs_14px-s">Forward</span>
                             </label>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
             </form>
             <div class="row px-xl-5 px-3 py-5">
                 <div class="col-12 text-right">
-                    <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_184px-s"><strong>SAVE</strong></button>
+                    <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_h_184px_x_63px-s"><strong>SAVE</strong></button>
                 </div>
             </div>
         </div>
