--- a/more.html
+++ b/more.html
@@ -22,17 +22,17 @@
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
 
-        <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
-            <div class="container-fluid px-xl-4 px-0">
-                <div class="row w-100">
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-2">
+        <nav class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
+            <div class="container-fluid px-0">
+                <div class="row w-100 pr-xl-3">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-2 pt-2">
                         <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item ml-xl-4 ml-2">
-                                    <a class="nav-link" href="Home/home.html">
+                            <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
+                                <li class="nav-item ml-lg-0 ml-2">
+                                    <a class="nav-link pl-lg-0" href="Home/home.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
@@ -54,7 +54,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="more.html">
                                         <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
                                     </a>
                                 </li>
@@ -63,12 +63,12 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a>
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span> Adailiya </span>
+                            <a class="pr-3">
+                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
+                                <span class="text-dark"> <strong>Adailiya </strong></span>
                             </a>
-                            <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                            <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                            <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                         </div>
                     </div>
                 </div>
@@ -80,15 +80,15 @@
         <div class="container-fluid">
             <div class="row py-5 px-xl-5 justify-content-between">
                 <div class="col-md-5 col-12 align-self-center">
-                    <h1 class="ft_3rem-s">
+                    <h1 class="">
                         <Strong>More</Strong>
                     </h1>
-                    <h3>Change your account settings</h3>
+                    <h4>Change your account settings</h4>
                 </div>
                 <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
-                    <a href="football_login1.html" class="btn bg_green-s br_10px-s d-flex justify-content-center w_184px-s text-white py-4">
-                        <img src="assets/images/logout_icon.svg" class="mr-2" alt="logout icon">
-                        <strong><h3>Logout</h3></strong>
+                    <a href="football_login1.html"  class="btn bg_green-s br_10px-s d-flex justify-content-center w_h_184px_x_63px-s text-white py-3">
+                        <img src="assets/images/logout_icon.svg" width="20" class="mr-2" alt="logout icon">
+                        <strong class="align-self-center"><h6 class="mb-1">Logout</h6></strong>
                     </a>
                 </div>
             </div>
@@ -96,18 +96,18 @@
         <!-- ------heading container - end -->
 
         <!-- container for favorite players - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s">
+        <div class="container-fluid bg-white br_47px-s">
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 fg_green-s">
-                    <h3 class=""><strong>Account</strong></h3>
+                    <h4 class=""><strong>Account</strong></h4>
                 </div>
             </div>
             <div class="row pt-2 pb-5 px-xl-5">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <a class="td_none-s" href="edit_profile.html">
-                        <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                            <div>
-                                <h3><strong>Edit Personal Profile</strong></h3>
+                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                            <div class="align-self-center">
+                                <h6 class="mb-0"><strong>Edit Personal Profile</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
@@ -116,9 +116,9 @@
                     </a>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_phone_num_modal-d">
-                        <div>
-                            <h3><strong>Update Phone Number</strong></h3>
+                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_phone_num_modal-d">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Update Phone Number</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <img src="assets/images/arrow_black.svg" alt="">
@@ -126,9 +126,9 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_password_modal-d">
-                        <div>
-                            <h3><strong>Update Pasword</strong></h3>
+                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_password_modal-d">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Update Pasword</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <img src="assets/images/arrow_black.svg" alt="">
@@ -136,9 +136,9 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3" data-toggle="modal" data-target="#update_email_modal-d">
-                    <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                        <div>
-                            <h3><strong>Update Email</strong></h3>
+                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Update Email</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <img src="assets/images/arrow_black.svg" alt="">
@@ -150,18 +150,18 @@
 
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 fg_green-s">
-                    <h3 class=""><strong>Notifications</strong></h3>
+                    <h4 class=""><strong>Notifications</strong></h4>
                 </div>
             </div>
 
             <div class="row pt-2 pb-5 px-xl-5">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                        <div>
-                            <h3><strong>Notification</strong></h3>
+                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="align-self-center">
+                            <h6 class="mb-0"><strong>Notification</strong></h6>
                         </div>
-                        <div>
-                            <label class="switch">
+                        <div class="align-self-center">
+                            <label class="switch mb-0">
                                 <input type="checkbox" checked>
                                 <span class="slider round"></span>
                             </label>
@@ -173,15 +173,15 @@
 
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 fg_green-s">
-                    <h3 class=""><strong>More</strong></h3>
+                    <h4 class=""><strong>More</strong></h4>
                 </div>
             </div>
             <div class="row pt-2 pb-5 px-xl-5">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <a class="td_none-s" href="term_and_condition.html">
-                        <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                            <div>
-                                <h3><strong>Term And Conditions</strong></h3>
+                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                            <div class="align-self-center">
+                                <h6 class="mb-0"><strong>Term And Conditions</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
@@ -191,9 +191,9 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <a class="td_none-s" href="help.html">
-                        <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                            <div>
-                                <h3><strong>help</strong></h3>
+                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                            <div class="align-self-center">
+                                <h6 class="mb-0"><strong>help</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
@@ -203,9 +203,9 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <a class="td_none-s" href="about_us.html">
-                        <div class="d-flex bg_grey-s py-4 px-4 br_10px-s text-dark justify-content-between">
-                            <div>
-                                <h3><strong>About Us</strong></h3>
+                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                            <div class="align-self-center">
+                                <h6 class="mb-0"><strong>About Us</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
@@ -301,16 +301,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-3 code_border-s">
+                                    <div class="  p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
@@ -514,16 +514,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-3 code_border-s">
+                                    <div class="  p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
@@ -725,16 +725,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-3 code_border-s">
+                                    <div class="  p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-3 code_border-s">
+                                    <div class=" p-4 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
