--- a/about_us.html
+++ b/about_us.html
@@ -21,22 +21,22 @@
 
 
         <div class="container-fluid px-xl-5 px-3">
-            <div class="row pt-5 pb-3">
-                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
+            <div class="row pt-4 pb-3">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-2 order-2">
                     <a class="td_none-s" href="more.html">
-                        <h1 class="pr-2 text-dark">More</h1>
+                        <h4 class="pr-2 text-dark">More</h4>
                     </a>
-                    <h1 class="px-2"><strong>/</strong></h1>
-                    <h1 class="fg_green-s pl-2">About Us</h1>
+                    <h4 class="px-2"><strong>/</strong></h4>
+                    <h4 class="fg_green-s pl-2">About Us</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                     <div class="">
-                        <a>
-                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                            <span> Adailiya </span>
+                        <a class="pr-3">
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong></span>
                         </a>
-                        <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                        <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                        <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                     </div>
                 </div>
             </div>
@@ -45,13 +45,13 @@
 
 
         <!-- container for favorite players - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s">
+        <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <div class="row pt-5 px-xl-4">
                 <div class="col-6">
                     <img src="assets/images/black_logo.svg" width="100" class="" alt="Logo">
                     <div class="position-absolute logo_text-s text-white">
                         <h5>
-                            <h3>LOGO</h3>
+                            LOGO
                         </h5>
                     </div>
                 </div>
