--- a/help.html
+++ b/help.html
@@ -21,22 +21,22 @@
 
 
         <div class="container-fluid px-xl-5 px-3">
-            <div class="row pt-5 pb-3">
-                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
+            <div class="row pt-4 pb-3">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-1 order-2">
                     <a class="td_none-s" href="more.html">
-                        <h1 class="pr-2 text-dark">More</h1>
+                        <h4 class="pr-2 text-dark">More</h4>
                     </a>
-                    <h1 class="px-2"><strong>/</strong></h1>
-                    <h1 class="fg_green-s pl-2">Help</h1>
+                    <h4 class="px-2"><strong>/</strong></h4>
+                    <h4 class="fg_green-s pl-2">Help</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                     <div class="">
-                        <a>
-                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                            <span> Adailiya </span>
+                        <a class="pr-3">
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong></span>
                         </a>
-                        <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                        <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                        <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
 
 
         <!-- container for favorite players - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s">
+        <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <label class="chat_button-s"> 
             <img src="assets/images/bot_chat.svg" id="chat_icon-d"  alt="chat icon">
            </label>
@@ -108,7 +108,7 @@
 
             <div class="row pt-5 px-xl-4">
                 <div class="col-12">
-                    <h1 class="fg_green-s">FAQs</h1>
+                    <h3 class="fg_green-s">FAQs</h3>
                 </div>
             </div>
             <div class="row py-5 px-xl-4">
@@ -118,7 +118,7 @@
                             <div class="card-header border-0 bg-white px-0 d-flex justify-content-between" id="benefits-d">
                                 <button class="btn btn-link btn-block px-0 text-left text-dark focus_none-s button_click-s td_none-s d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#benefits_content-d" aria-expanded="true" aria-controls="benefits_content-d">
                           <div>
-                            <strong>What are the benefits?</strong>
+                            <h5><strong>What are the benefits?</strong></h5>
                           </div>
                           <div class=" text-right img_div-s">
                             <img src="assets/images/arrow_up.svg" class="dropdown_img-s" alt="">
@@ -143,7 +143,7 @@
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block px-0 text-left d-flex justify-content-between button_click-s collapsed text-dark focus_none-s td_none-s" type="button" data-toggle="collapse" data-target="#remove_Account_content-d" aria-expanded="false" aria-controls="remove_Account_content-d">
                             <div>
-                              <strong>How to remove account?</strong>
+                              <h5><strong>How to remove account?</strong></h5>
                             </div>
                             <div class="text-right img_div-s">
                               <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
@@ -169,7 +169,7 @@
                                 <h2 class="mb-0">
                                     <button class="btn btn-link px-0 btn-block text-left collapsed text-dark focus_none-s td_none-s d-flex justify-content-between button_click-s" type="button" data-toggle="collapse" data-target="#app_work_content-d" aria-expanded="false" aria-controls="app_work_content-d">
                             <div>
-                              <strong>How this app works?</strong>
+                              <h5><strong>How this app works?</strong></h5>
                             </div>
                             <div class="text-right img_div-s">
                               <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
@@ -195,7 +195,7 @@
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block px-0 text-left collapsed text-dark focus_none-s td_none-s d-flex justify-content-between button_click-s" type="button" data-toggle="collapse" data-target="#when_used_content-d" aria-expanded="false" aria-controls="when_used_content-d">
                             <div>
-                              <strong>When can be used?</strong>
+                              <h5><strong>When can be used?</strong></h5>
                             </div>
                             <div class="text-right img_div-s">
                               <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
