--- a/favorite_player.html
+++ b/favorite_player.html
@@ -96,9 +96,9 @@
                             <h2>Players <span> (50) </span> </h2>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card">
+                            <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
-                                    <i class="fa fa-heart" aria-hidden="true"></i>
+                                    <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
                                 </div>
                                 <div class="container">
                                     <div class="row">
@@ -106,10 +106,10 @@
                                             <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
-                                            <div class="thamer_startrating_m">
-                                                <h4>thamer</h4>
-                                                <h6>@thamermd</h6>
-                                                <p>
+                                            <div class="text-white">
+                                                <h6 class="mb-0">Thamer</h6>
+                                                <span class=" opacity_4-s">@thamermd</span>
+                                                <p class="fg_yellow-s">
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
@@ -120,25 +120,29 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="age_years_text d-flex">
-                                        <p>age (years)</p>
-                                        <p>matches</p>
-                                        <p>missed</p>
-                                        <p>missed</p>
-                                    </div>
-                                    <div class="age_years_textt d-flex">
-                                        <h2>28</h2>
-                                        <h2 class="pl-5">28</h2>
-                                        <h2 class="pl-4">28</h2>
-                                        <h2 class="pl-3">Goalkeeper</h2>
+                                    <div class="row pt-4">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                            <span class="opacity_4-s">Age (years)</span>
+                                            <span class="ft_17px-s">28</span>
+                                        </div>
+                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                            <span class="opacity_4-s">Matches</span>
+                                            <span class="ft_17px-s">15</span>
+                                        </div>
+                                        <div class="col-3 text-white px-3 ft_size_14px-s">
+                                            <span class="opacity_4-s">Missed</span>
+                                            <span class="ft_17px-s">2</span>
+                                        </div>
+                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                            <span class="opacity_4-s">Missed</span>
+                                            <span class="ft_size_14px-s">Defender</span>
+                                        </div>
                                     </div>
                                     <hr class="goalkeeper_margin_b" />
 
                                     <div class="aditya_location">
                                         <p>
-
                                             <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-
                                             <span class="pull-right"> send message >> </span>
                                         </p>
                                     </div>
@@ -147,9 +151,9 @@
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card">
+                            <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
-                                    <i class="fa fa-heart" aria-hidden="true"></i>
+                                    <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
                                 </div>
                                 <div class="container">
                                     <div class="row">
@@ -157,10 +161,10 @@
                                             <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
-                                            <div class="thamer_startrating_m">
-                                                <h4>thamer</h4>
-                                                <h6>@thamermd</h6>
-                                                <p>
+                                            <div class="text-white">
+                                                <h6 class="mb-0">Thamer</h6>
+                                                <span class=" opacity_4-s">@thamermd</span>
+                                                <p class="fg_yellow-s">
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
@@ -171,31 +175,37 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="age_years_text d-flex">
-                                        <p>age (years)</p>
-                                        <p>matches</p>
-                                        <p>missed</p>
-                                        <p>missed</p>
-                                    </div>
-                                    <div class="age_years_textt d-flex">
-                                        <h2>28</h2>
-                                        <h2 class="pl-5">28</h2>
-                                        <h2 class="pl-4">28</h2>
-                                        <h2 class="pl-3">Goalkeeper</h2>
+                                    <div class="row pt-4">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
+                                            <span class="opacity_4-s">Age (years)</span>
+                                            <span class="ft_17px-s">28</span>
+                                        </div>
+                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                            <span class="opacity_4-s">Matches</span>
+                                            <span class="ft_17px-s">15</span>
+                                        </div>
+                                        <div class="col-3 text-white px-3 ft_size_14px-s">
+                                            <span class="opacity_4-s">Missed</span>
+                                            <span class="ft_17px-s">2</span>
+                                        </div>
+                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                            <span class="opacity_4-s">Missed</span>
+                                            <span class="ft_size_14px-s">Defender</span>
+                                        </div>
                                     </div>
                                     <hr class="goalkeeper_margin_b" />
 
                                     <div class="aditya_location">
                                         <p>
-
                                             <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-
                                             <span class="pull-right"> send message >> </span>
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+
 
 
 
