--- a/game_invitation.html
+++ b/game_invitation.html
@@ -38,29 +38,29 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="Home/home.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../chat.html">
+                                    <a class="nav-link" href="chat.html">
                                         <span><img src="assets/images/chat.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../favorite_player.html">
+                                    <a class="nav-link" href="favorite_player.html">
                                         <span><img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> </span> Favorites
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../game_invitation.html">
+                                    <a class="nav-link" href="#">
                                         <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../more.html">
+                                    <a class="nav-link" href="more.html">
                                         <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
                                     </a>
                                 </li>
@@ -407,7 +407,7 @@
 
                                 <!--SUBMIT button-->
                                 <div class="col-6 pl-2">
-                                    <button type="submit" class="btn fs_12px-s bg-white br_10px-s py-3 fg_green-s w-100" ><strong>MESSAGE</strong></button>
+                                    <button type="submit" class="btn fs_12px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>MESSAGE</strong></button>
                                 </div>
                             </div>
                         </div>
@@ -619,7 +619,6 @@
 
 
     <!-- .................Game invitation Page End ......................... -->
-    <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
@@ -631,6 +630,7 @@
     <script src="assets/js/calendar.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
+    <script src="assets/js/main.js"></script>
     <script type="text/javascript">
         var config = `
         function selectDate(date) {
